--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
+.App{
+  
+  overflow: hidden;
   text-align: center;
+  
+
+  width: 100vw;
+  height: 100vh;
+
+}
+.App_home_background{
+  background: linear-gradient(197.69deg, rgba(14, 10, 255, 0.6) 0.68%, rgba(219, 0, 131, 0.66) 100%);
+  background-blend-mode: multiply;
+  
+}
+.App_other_background{
+  background: linear-gradient(197.69deg, rgba(119, 0, 155, 0.6) 0.68%, rgba(29, 0, 219, 0.66) 100%);
+  background-blend-mode: multiply;
+  
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+
+
+@keyframes color_reverse{
+  0%{
+    background: linear-gradient(197.69deg, rgba(119, 0, 155, 0.6) 0.68%, rgba(29, 0, 219, 0.66) 100%);
+  background-blend-mode: multiply;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+  100%{
+    background: linear-gradient(197.69deg, rgba(14, 10, 255, 0.6) 0.68%, rgba(219, 0, 131, 0.66) 100%);
+    background-blend-mode: multiply;
   }
 }
