modified:   src/App.css 	modified:   src/App.js 	renamed:    src/assets/array.svg -> src/assets/arrow.svg 	new file:   src/assets/photo.png 	new file:   src/assets/photo_2.png 	modified:   src/components/Cases.jsx 	modified:   src/components/CommunicationAndLinks.jsx 	modified:   src/components/Home.jsx 	modified:   src/components/Stack.jsx 	modified:   src/components/StudyMaterials.jsx 	new file:   src/components/sub-component/ToggleLanguage.jsx 	modified:   src/index.css

--- a/src/App.css
+++ b/src/App.css
@@ -9,27 +9,21 @@
 
 }
 .App_home_background{
-  background: linear-gradient(197.69deg, rgba(14, 10, 255, 0.6) 0.68%, rgba(219, 0, 131, 0.66) 100%);
-  background-blend-mode: multiply;
-  
-}
-.App_other_background{
-  background: linear-gradient(197.69deg, rgba(119, 0, 155, 0.6) 0.68%, rgba(29, 0, 219, 0.66) 100%);
-  background-blend-mode: multiply;
-  
-  
+  background: linear-gradient(149deg, rgba(24,187,156,1) 0%, rgba(106,57,175,1) 42%, rgba(187,24,148,1) 72%, rgba(115,53,134,1) 100%);
+  animation: gradient 10s infinite linear; 
+  background-size: 400%; 
 }
 
 
 
-
-@keyframes color_reverse{
-  0%{
-    background: linear-gradient(197.69deg, rgba(119, 0, 155, 0.6) 0.68%, rgba(29, 0, 219, 0.66) 100%);
-  background-blend-mode: multiply;
+@keyframes gradient {
+  0% {
+      background-position: 80% 0%;
   }
-  100%{
-    background: linear-gradient(197.69deg, rgba(14, 10, 255, 0.6) 0.68%, rgba(219, 0, 131, 0.66) 100%);
-    background-blend-mode: multiply;
+  50% {
+      background-position: 20% 100%;
+  }
+  100% {
+      background-position: 80% 0%;
   }
 }
