--- a/src/index.css
+++ b/src/index.css
@@ -23,11 +23,71 @@ h6{
   font-weight: 400;
   font-size: 24px;
   line-height: 38px;
+  width: 100%;
   
   align-items: center;
   text-align: center;
 
-  color: #564C53;
+  color: #000000;
 
-  text-shadow: 0px 4px 5px rgba(0, 0, 0, 0.25);
+  
+}
+p{
+  font-size: 16px;
+}
+.x_right_array_animate{
+  animation: right_animate 1.5s infinite ease-in-out;
+}
+.x_left_array_animate{
+  animation: left_animate 1.5s infinite ease-in-out;
+}
+.y_up_array_animate{
+  animation: up_animate 1.5s infinite ease-in-out;
+}
+.y_down_array_animate{
+  animation: down_animate 1.5s infinite ease-in-out;
+}
+@keyframes right_animate{
+  0%{
+    right: -18px;
+  }
+  50%{
+    right: -5px;
+  }
+  100%{
+    right: -18px;
+  }
+}
+@keyframes left_animate{
+  0%{
+    left: -18px;
+  }
+  50%{
+    left: -5px;
+  }
+  100%{
+    left: -18px;
+  }
+}
+@keyframes up_animate{
+  0%{
+    top: -18px;
+  }
+  50%{
+    top: -5px;
+  }
+  100%{
+    top: -18px;
+  }
+}
+@keyframes down_animate{
+  0%{
+    bottom: -18px;
+  }
+  50%{
+    bottom: -5px;
+  }
+  100%{
+    bottom: -18px;
+  }
 }
